# idf-ci

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  license_header.txt  pyproject.toml
.cursor/rules/: code-style.mdc
.github/workflows/: build-docs.yml  publish-to-pypi.yml  report.yml  sync-jira.yml  test-linux-comment.yml  test-linux.yml  test-python.yml  test-windows.yml
docs/: README.md  conf_common.py
docs/en/: conf.py  index.rst
docs/en/explanations/: config-files.rst  dynamic-gitlab-pipeline.rst  gitlab-artifacts.rst  profiles.rst
docs/en/guides/: cli.rst  cli_build.rst  cli_gitlab.rst  gitignore.rst  gitlab.rst  idf-ci-configuration.rst  local-preview.rst  local_preview.rst  migrate-to-1.x.rst  pre-commit.rst
docs/en/guides/cli_group_cmds/: cli_build.rst  cli_config.rst  cli_gitlab.rst  cli_test.rst
docs/en/guides/cli_internal_cmds/: cli_internal_build.rst
docs/en/references/: build-config-file.rst  build-profile.rst  ci-config-file.rst  ci-profile.rst  cli-commands.rst  gitlab-env-vars.rst  test-config-file.rst  test-profile.rst
idf_ci/: __init__.py  _compat.py  _vendor.py  cli.py  compat.py  envs.py  profiles.py  scripts.py  settings.py  utils.py
idf_ci/build_collect/: models.py  scripts.py  template.html
idf_ci/cli/: __init__.py  _options.py  build.py  build_group.py  build_profile.py  ci_profile.py  completions.py  config_group.py  gitlab_group.py  test.py  test_group.py  test_profile.py
idf_ci/filters/: component_targets.py
idf_ci/hooks/: check_tests_missing_config.py
idf_ci/idf_gitlab/: __init__.py  api.py  envs.py  pipeline.py  retry.py  s3.py  scripts.py  utils.py
idf_ci/idf_pytest/: __init__.py  models.py  plugin.py  script.py  scripts.py
idf_ci/profiles/: default_build_profile.toml
idf_ci/templates/: .idf_build_apps.toml  default_ci_profile.toml  default_test_profile.ini
tests/: conftest.py  test_artifacts.py  test_build.py  test_build_collect.py  test_case_collection.py  test_check_tests_hook.py  test_cli.py  test_component_targets.py  test_get_apps.py  test_get_cases.py  test_gitlab.py  test_plugin.py  test_profiles.py  test_pytest_plugin.py  test_s3.py  test_settings.py  test_upload_app_sizes.py  test_utils.py
tests/fixtures/: build_summary.xml
